--- a/src/classes/Leads.cls
+++ b/src/classes/Leads.cls
@@ -3,7 +3,7 @@ public class Leads  extends SObjectDomain {
     List<Lead> leadsWithCadence;
     List<Lead> leadsWithoutCadence;
     List<Lead> records;
-    public static boolean flag = true;
+    public static Integer flag = 0;
     
     public Leads(List<Lead> sObjectList) { 
         super(sObjectList);
@@ -59,9 +59,9 @@ public class Leads  extends SObjectDomain {
 		Map<Id, List<Sequence_Action__c>> performedPartAct = CadenceService.performParticipantActions(leadMap.values(), partActToPerform);
 		
 		//perform participant field update
-		flag = false;
 		List<Lead> leadsToUpdate = (List<Lead>)CadenceService.updateSObjectFields(leadMap.values(), performedPartAct, CadenceConstants.LEAD_OBJECT_NAME, true);
-		
+		flag = 1;
+        
 		if(leadsToUpdate != null && !leadsToUpdate.isEmpty()) {
         	update leadsToUpdate; 
         }
@@ -71,8 +71,9 @@ public class Leads  extends SObjectDomain {
     
     public override void onBeforeUpdate(Map<Id,SObject> existingRecords){
 
-        System.debug('Before update called');
-		if(!flag) {
+        System.debug('Before update called'+ flag);
+		if(flag==1) {
+            System.debug('Before update called but not proceeded');
 			return;
 		}
 		CadenceService.processParticipantsWithCadences(records, CadenceConstants.LEAD_OBJECT_NAME, true);
