--- a/src/classes/Tasks.cls
+++ b/src/classes/Tasks.cls
@@ -16,7 +16,8 @@ public with sharing class Tasks extends SObjectDomain {
      
     public override void onBeforeInsert() {
     	
-        System.debug('On before insert');
+        
+        System.debug('On before insert'+ (List<Task>)records);
         Map<Id, List<Sequence_Action__c>> objToPartActMap = new Map<Id, List<Sequence_Action__c>>();
     	List<Sequence_Action__c> actionToUpdate = new List<Sequence_Action__c>();
     	Map<Id, List<CadenceAction__c>> objToCadActListMap = new Map<Id, List<CadenceAction__c>>();
@@ -62,6 +63,7 @@ public with sharing class Tasks extends SObjectDomain {
                             }
                         } else {
                             if(taskType.equals(CadenceConstants.ACTION_TYPE_EMAIL)) {
+                                System.debug('How this is not done');
                                 action.isActionPerformed__c = true;	
 		                        t.Sequence_Action__c = action.Id;   
 								actionToUpdate.add(action);
@@ -89,7 +91,7 @@ public with sharing class Tasks extends SObjectDomain {
 
 	public override void onBeforeUpdate(Map<Id,SObject> existingRecords) {
 		
-        System.debug('On before update');
+        System.debug('On before update of task');
 
 	   	Map<Id, List<Sequence_Action__c>> objToPartActMap = new Map<Id, List<Sequence_Action__c>>();
     	List<Sequence_Action__c> actionToUpdate = new List<Sequence_Action__c>();
@@ -139,6 +141,7 @@ public with sharing class Tasks extends SObjectDomain {
                         if(taskType == null) {
                             if(taskSubject.containsIgnoreCase('Email')) {
                             	action.isActionPerformed__c = true;	
+                                System.debug('In logs for email typ e in task');
                 		        t.Sequence_Action__c = action.Id;   
 								actionToUpdate.add(action);
 								break;    
