code commented for 272, 313, 333, 335 and new issue on dev org.

--- a/src/classes/CadenceBatch.cls
+++ b/src/classes/CadenceBatch.cls
@@ -37,6 +37,17 @@ public with sharing class CadenceBatch implements Database.Batchable<sObject>, D
             String fieldName = fieldDescribe.getName();
             allowedFields.add(fieldName);
    		}
+        
+        if(allowedFields.size() > 0){
+            String apiNameWithNamespace;
+            for(String fld : allowedFields){
+                apiNameWithNamespace = nameSpace + fld;
+                if(allowedFields.contains(apiNameWithNamespace)){
+                    allowedFields.remove(fld); 
+                }
+            }
+        }
+        
 		query += String.join(new List<String>(allowedFields), ',');
    		query += ' FROM '+ objName +' WHERE '+nameSpace+'Cadence_Id__c = null';
    
